# bricks

./: .gitignore  Cargo.toml  README.md  TODO.md  \
.github/workflows/: mdbook.yml  release.yml
book/: book.toml
book/src/: README.md  SUMMARY.md  adding_libs.md  installation.md  overrides.md  platforms.md  setup.md
examples/smarciopoly/: brick.toml
examples/smarciopoly/src/: main.c
examples/smarciopoly/src/utils/: math.c
examples/strings/: brick.toml
examples/strings/src/: lib.c  new.c  strings.h
src/: lib.rs  pretty.rs
src/cli/: args.rs  commandext.rs  mod.rs  pretty.rs
src/cli/clean/: mod.rs
src/cli/init/: make_config.rs  mod.rs  templates.rs
src/cli/install/: mod.rs
src/cli/run/: mod.rs
src/config/: brick.rs  compiler.rs  lib.rs  mod.rs  overrides.rs  packages.rs  platform.rs  read.rs
src/libs/: blueprint.rs  copy_dir.rs  git_utils.rs  install_lib.rs  mod.rs
src/run/: mod.rs
