[package]
name = "bricks"
authors = ["Tesohh <github.com/Tesohh>"]
version = "0.1.0"
edition = "2021"

[dependencies]
anstyle = "1.0.10"
anstyle-owo-colors = "2.0.3"
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }
home = "0.5.11"
owo-colors = "4.1.0"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
toml = "0.8.19"
walkdir = "2.5.0"
