[package]
name = "tesohh-bricks"
authors = ["Tesohh <github.com/Tesohh>"]
version = "1.0.4"
edition = "2021"
description = "build system and package manager for C/C++"
license-file = "LICENSE"
documentation = "https://tesohh.github.io/bricks"
homepage = "https://github.com/Tesohh/bricks"
repository = "https://github.com/Tesohh/bricks"
categories = ["command-line-utilities", "development-tools", "development-tools::build-utils"]

[lib]
name = "bricks"  # Keeps the internal crate name as "bricks"

[[bin]]
name = "bricks"  # Keeps the final binary name as "bricks"
path = "src/bin/bricks.rs"

[dependencies]
anstyle = "1.0.10"
anstyle-owo-colors = "2.0.3"
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }
git2 = {version = "0.20.0", features = ["https"]}
home = "0.5.11"
owo-colors = "4.1.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
toml = "0.8.19"
walkdir = "2.5.0"
